whoami/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: whoami
  annotations:
   kubernetes.io/ingress.class: front-layer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.front.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/api`)
      services:
        - name: whoami
          port: 80
  tls: {}
    # certResolver: le
