whoami/twst.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-ext-svc
  namespace: whoami
spec:
  type: ExternalName
  externalName: whoami.front.dbl25tst01w05.mageekbox.eu
  ports:
  - port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-ext-ig
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: back-layer
    hub.traefik.io/api: test-ext-api
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: >-
        Host(`whoami.dbl25tst01w05.mageekbox.eu`) &&
        PathPrefix(`/api`)
      services:
        - name: test-ext-svc
          port: 443
          passHostHeader: false
      middlewares:
        - name: test-ext-replacepath
  tls:
    certResolver: le
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-ext-replacepath
  namespace: whoami
spec:
  replacePathRegex:
    regex: ^/api(.*)
    replacement: /searchplus-do/DOMAIN/v11$1
